Path to data adjusted

--- a/PA1_Template.Rmd
+++ b/PA1_Template.Rmd
@@ -16,7 +16,7 @@ Reproducible Research Projekt 1
 ```{r}
 library(ggplot2)
 library(plyr)
-activity <- read.csv("C:/Users/chris/Documents/AI Training/AI Training/AI_course/Reproducible_research_project_1/Data/repdata_data_activity/activity.csv")
+activity <- read.csv("C:/Users/chris/Documents/GitHub/Reproducible_research_project_1/Data/repdata_data_activity/activity.csv")
 activity$day <- weekdays(as.Date(activity$date))
 activity$DateTime<- as.POSIXct(activity$date, format="%Y-%m-%d")
 
